@@ -73,7 +73,7 @@ public class MinTest
     min.complete( context, resultEntryCollector.iterator() );
     Tuple tuple = resultEntryCollector.iterator().next().getTuple();
 
-    assertEquals( "Got expected initial value on start", Double.MAX_VALUE, tuple.getDouble( 0 ), 0.0d );
+    assertEquals( "Got expected initial value on start", null, tuple.get( 0 ) );
     }
 
   /**
